1.3.76 (Build 2025042100)
- Support for Ningxia region (requires Poodll China subscription)

1.3.75 (Build 2025041800)
- Support for Moodle 5.0 and PHP 8.4
- Added support for custom Cloud Poodll server

1.3.74 (Build 2025040400)
- Added AI image generator. You need to install the Poodll AI placement plugin for this to work. https://github.com/justinhunt/moodle-aiplacement_poodll
- Fixed for failing add_word button on words admin page
- Added is_branded callback so the activity icon is no longer a pink smudge
- Improvements to lang chooser feature

1.3.73 (Build 2025012500)
- added word preview mode

1.3.72 (Build 2024120700)
- added support for Moodle Mobile app
- randomized cards on definitions page
- fixed issue with langchooser in free mode

1.3.71 (Build 2024111203)
- added a language chooser for students to select their preferred (native) language - this only works if words were added with word wizard
- added a push page to push settings from one WordCards activities to others with same name, or in same course, or site wide.

1.3.70 (Build 2024111200)
- added completion option for all words learned and completion fixes
- added word learned event
- added option to use the model sentence on speechcards instead of the term/word
- added a language chooser for students to select their preferred (native) language - this only works if words were added with word wizard
- added a push page to mush settings from one WordCards activities to others with same name, in same course, or site wide.

1.3.69 (Build 2024101501)
- Fix for code warning about session_mode

1.3.68 (Build 2024101500)
- Added ability to set the practice types available in free mode
- Added foundations of new "sessions" mode - not yet Enabled
- Improvements to Privacy API implementation

1.3.67 (Build 2024100700)
- Fixes for PHP 8.2 and 8.3

1.3.66 (Build 2024092500)
- Added support for Vietnamese

1.3.65 (Build 2024082600)
- Fix for layout(display of introduction) issue on Adaptable theme
