@@ -1,3 +1,5 @@
+- support for lang server in Ningxia
+
 1.3.76 (Build 2025042100)
 - Support for Ningxia region (requires Poodll China subscription)
 
